// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <App /> should renders correctly with context 1`] = `
<div
  className="page"
>
  <Connect(LoadingBar)
    className="loading-bar"
  />
  <MainSpinner />
  <div
    className="wrapper touch-device"
  >
    <header
      className="header"
    >
      <Connect(Connect(TopHeader)) />
      <Header />
    </header>
    <withRouter(Connect(Connect(Connect(Main)))) />
  </div>
  <Footer />
</div>
`;

exports[`Component <App /> should renders correctly with is not touch device 1`] = `
<div
  className="page"
>
  <Connect(LoadingBar)
    className="loading-bar"
  />
  <MainSpinner />
  <div
    className="wrapper is-not-touch-device"
  >
    <header
      className="header"
    >
      <Connect(Connect(TopHeader)) />
      <Header />
    </header>
    <withRouter(Connect(Connect(Connect(Main)))) />
  </div>
  <Footer />
</div>
`;

exports[`Component <App /> should renders correctly with touch device 1`] = `
<div
  className="page"
>
  <Connect(LoadingBar)
    className="loading-bar"
  />
  <MainSpinner />
  <div
    className="wrapper touch-device"
  >
    <header
      className="header"
    >
      <Connect(Connect(TopHeader)) />
      <Header />
    </header>
    <withRouter(Connect(Connect(Connect(Main)))) />
  </div>
  <Footer />
</div>
`;
